--- a/toiawase.html
+++ b/toiawase.html
@@ -57,7 +57,7 @@
 
 <h2>Reservation<span>ご予約・お問合せ</span></h2>
 
-<p class="c"><span class="big1">TEL:準備中</span></p>
+<p class="c"><span class="big1">TEL:052-990-4800</span></p>
 
 <p class="c mb50">
 <input type="button" value="予約サイトからのご予約はこちら" onClick="location.href='https://www.hotpepper.jp/strJ003648099/'" class="btn">
