--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ header #logo img {
 
 <div class="scrollme box1">
 <figure class="w50 fl animateme" data-when="enter" data-from="0.5" data-to="0.3" data-opacity="0" data-translatex="-100"><img src="images/kaisennyaki.jpg" alt=""></figure>
-<figcaption class="w50 fr"><strong>豊富な品揃え</strong>お好み焼きやもんじゃだけでなく、鉄板で焼くだし巻き卵や海鮮焼き、ビビンバなどもご用意しています。デザートには、店長の地元である長野県の開田高原アイスを提供しております。</figcaption>
+<figcaption class="w50 fr"><strong>豊富な品揃え</strong>お好み焼きやもんじゃだけでなく、鉄板で焼く焼きそばや海鮮焼き、ビビンバなどもご用意しています。デザートには、店長の地元である長野県の開田高原アイスを提供しております。</figcaption>
 </div>
 
 <div class="scrollme box1">
