--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 <td>6席</td>
 </tr>
 <tr>
-<th>座敷</th>
+<th>掘りごたつ</th>
 <td>4人席 × 2</td>
 </tr>
 </table>
@@ -104,7 +104,7 @@
 
 <div class="scrollme box1">
   <figure class="w50 fl animateme" data-when="enter" data-from="0.5" data-to="0.3" data-opacity="0" data-translatex="-100"><img src="images/shop5.jpg" alt=""></figure>
-  <figcaption class="w50 fr"><strong>座敷</strong></figcaption>
+  <figcaption class="w50 fr"><strong>掘りごたつ</strong></figcaption>
   </div>
 
 </section>
