--- a/toiawase.html
+++ b/toiawase.html
@@ -38,7 +38,7 @@
 <!--PC用（801px以上端末）メニューとロゴ-->
 <nav id="menubar">
 <div class="animateme">
-<h1><a href="index.html"><img src="images/logo2.png" alt="創作和食"></a></h1>
+<h1><a href="index.html"><img src="images/tsunagu_minilogo.png" alt="お好み焼き つなぐ"></a></h1>
 <ul>
 <li><a href="index.html">ホーム</a></li>
 <li><a href="about.html">当店について</a></li>
